--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   connectivity: ^3.0.6
   webview_flutter: ^3.0.4
+  equatable:
 
 dev_dependencies:
   flutter_test:
